Add network call every 1 minute

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,4 +11,6 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+CLIENT_ID = "87wjif2ck3gw4cf5gss3qcb1erant6"
+OAUTH_TOKEN = "0koaiuaigrp8dwisvb93fplk4mwzze"
 
